added picanha and flank steak recipe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/ribeye.html">Ribeye</a>
+    <a href="recipes/picanha.html">Ribeye</a>
+    <a href="recipes/flank.html">Ribeye</a>
 </body>
 </html>
