added back links to the main menu

--- a/recipes/ribeye.html
+++ b/recipes/ribeye.html
@@ -39,6 +39,7 @@
     </ul>
 
     <h4>Cooking steps</h4>
+    
     <ol>
         <li>dry brine ribeye the night before cooking with kosher salt.</li>
         <li>before cooking season with black pepper and garlic powder.</li>
@@ -49,7 +50,7 @@
         <li>Enjoy!</li>
     </ol>
 
-    <a href="index.html">Back to main page.</a>
+    <a href="../index.html">Back to main page.</a>
 </body>
 
 </html>
