--- a/recipes/flank.html
+++ b/recipes/flank.html
@@ -49,7 +49,7 @@
         <li>Enjoy!</li>
     </ol>
 
-    <a href="index.html">Back to main page.</a>
+    <a href="../index.html">Back to main page.</a>
 </body>
 
 </html>
